--- a/.github/workflows/build-aab.yml
+++ b/.github/workflows/build-aab.yml
@@ -1,7 +1,9 @@
 name: Build AAB
 
 on:
-#  workflow_dispatch
+  #  workflow_dispatch
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
