--- a/.github/workflows/build-aab.yml
+++ b/.github/workflows/build-aab.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Prepare Keystore variables
         run: |
           echo "keystore_path=${GITHUB_WORKSPACE}/keystore/keystore.jks" &>> local.properties
-          echo "keystore_password=${secrets.KEYSTORE_PASSWORD}" &>> local.properties
-          echo "keystore_key_alias=${secrets.KEYSTORE_KEY_ALIAS}" &>> local.properties
-          echo "keystore_key_password=${secrets.KEYSTORE_KEY_PASSWORD}" &>> local.properties
+          echo "keystore_password=${{secrets.KEYSTORE_PASSWORD}}" &>> local.properties
+          echo "keystore_key_alias=${{secrets.KEYSTORE_KEY_ALIAS}}" &>> local.properties
+          echo "keystore_key_password=${{secrets.KEYSTORE_KEY_PASSWORD}}" &>> local.properties
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
