--- a/.github/workflows/publish_google_play.yml
+++ b/.github/workflows/publish_google_play.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload Android Release to Play Store
         uses: r0adkll/upload-google-play@v1
         with:
-          serviceAccountJsonPlainText: ${secrets.SERVICE_ACCOUNT_JSON}
+          serviceAccountJsonPlainText: ${{secrets.SERVICE_ACCOUNT_JSON}}
           releaseFiles: bundle/release/app-release.aab
           packageName: com.akexorcist.sleepingforless
           track: production
