--- a/.github/workflows/build-compatible-test.yml
+++ b/.github/workflows/build-compatible-test.yml
@@ -1,16 +1,14 @@
 name: Build Compatible Test
 
-#on:
-#  push:
-#    branches: [ "main" ]
-#  pull_request:
-#    branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: set up JDK 11
