--- a/.github/workflows/publish_google_play.yml
+++ b/.github/workflows/publish_google_play.yml
@@ -1,11 +1,7 @@
 name: Publish App to Google Play
 
 on:
-  #  workflow_dispatch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch
 
 jobs:
   build:
