--- a/.github/workflows/publish-google-play.yml
+++ b/.github/workflows/publish-google-play.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: set up JDK 11
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
@@ -19,7 +19,7 @@ jobs:
       - name: Prepare Keystore
         run: |
           mkdir "${GITHUB_WORKSPACE}"/keystore
-          echo "${{secrets.KEYSTORE}}" > keystore/keystore.asc
+          echo "${{secrets.ENCRYPTED_KEYSTORE}}" > keystore/keystore.asc
           gpg -d --passphrase "${{secrets.KEYSTORE_PASSPHRASE}}" --batch keystore/keystore.asc > keystore/keystore.jks
 
       - name: Prepare Keystore variables
