--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,24 @@
 [versions]
+compileSdk = "34"
+minSdk = "21"
+targetSdk = "34"
 
-core-ktx = "1.12.0"
-appcompat = "1.6.1"
-constraintlayout = "2.1.4"
-junit = "4.13.2"
-junit-ext = "1.1.5"
-espresso-core = "3.5.1"
-androidbrowserhelper = "2.5.0"
-android-gradle-plugin = "8.11.1"
-kotlin-gradle-plugin = "1.9.20"
+versionCode = "212"
+versionName = "2.2.1"
+
+agp = "8.11.1"
+kotlin = "2.2.0"
 
 [libraries]
 
-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
-junit = { module = "junit:junit", version.ref = "junit" }
-junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit-ext" }
-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
-androidbrowserhelper = { module = "com.google.androidbrowserhelper:androidbrowserhelper", version.ref = "androidbrowserhelper" }
+core-ktx = { module = "androidx.core:core-ktx", version = "1.16.0" }
+appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
+constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version = "2.2.1" }
+junit = { module = "junit:junit", version = "4.13.2" }
+junit-ext = { module = "androidx.test.ext:junit", version = "1.2.1" }
+espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.6.1" }
+androidbrowserhelper = { module = "com.google.androidbrowserhelper:androidbrowserhelper", version = "2.6.2" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-gradle-plugin" }
+android-application = { id = "com.android.application", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
